[tool.poetry]
name = "1"
version = "0.1.0"
description = ""
authors = ["Roman-Braneshty <102828727+Roman-Braneshty@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
redis-lru = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
